--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,23 +2,24 @@
 {% block content %}
 
 <div class="p-7">
-  <h1 class="text-3xl font-primary font-bold text-primary capitalize mb-7">Welcome, {{ user }}!</h1>
+  <h1 class="text-3xl font-primary font-bold text-primary capitalize">Welcome, {{ user }}!</h1>
+  <hr class="my-3">
 
   
   <!-- Going cold section -->
-  <section class="card my-3 bg-violet-100 p-6">
-    <h1 class="text-2xl font-primary font-bold text-primary">Going Cold</h1>
+  <h1 class="text-2xl font-primary font-bold text-primary mt-4">Going Cold</h1>
+  <section class="card my-3 bg-violet-100 p-3">
     
     <!-- Container for job app and connections containers -->
-    <div class="lg:flex mt-4 h-fit bg-violet-200 rounded-2xl">
-      <div class="lg:w-1/2 h-[27.5rem] overflow-scroll px-4 py-3">
+    <div class="lg:flex h-fit rounded-2xl">
+      <div class="lg:w-1/2 h-[27.5rem] overflow-scroll px-4">
         
         {% for job in jobs %}
           {% if job.days_since_update > 21 %}
         <a href="{% url 'detail' job.id %}">
           <div
-          class="card my-3 bg-green-100 min-h-fit text-center  hover:scale-[1.02] transition-all duration-300 ease-in-out">
-          <div class="bg-white flex items-center justify-start p-2">
+          class="card my-3 bg-white min-h-fit text-center  hover:scale-[1.02] transition-all duration-300 ease-in-out">
+          <div class="bg-green-100 flex items-center justify-start p-2">
             <svg
             class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
             xmlns="http://www.w3.org/2000/svg"
@@ -54,11 +55,11 @@
 </div>
 
 <!-- Cold Connections container -->
-<div class="lg:w-1/2 h-96 overflow-y-auto px-4 py-3">
+<div class="lg:w-1/2 h-96 overflow-y-auto px-4">
   <!-- Cold Connections Card template -->
   <a href="">
-    <div class="card my-3 bg-cyan-100 min-h-fit text-center hover:scale-[1.01] transition-all duration-300 ease-in-out">
-      <div class="bg-white flex items-center justify-start p-2">
+    <div class="card my-3 bg-white min-h-fit text-center hover:scale-[1.01] transition-all duration-300 ease-in-out">
+      <div class="bg-cyan-100 flex items-center justify-start p-2">
         <svg
         class="w-7 h-7 p-0.5 border-2 rounded-full border-current shrink-0 mr-2"
         xmlns="http://www.w3.org/2000/svg"
@@ -86,13 +87,13 @@
 </div>
 </section>
 
-<section class="card my-3 bg-violet-100 p-6 ">
-  <h1 class="text-2xl font-primary font-bold text-primary">Pending To-Do's</h1>
-  <div class="grid 2xl:grid-cols-5 grid-cols-1 gap-1 2xl:overflow-x-auto px-3">
+<h1 class="text-2xl font-primary font-bold text-primary mt-10">Pending To-Do's</h1>
+<section class="card bg-violet-100 my-3 p-6">
+  <div class="grid 2xl:grid-cols-5 grid-cols-1 gap-4 overflow-y-auto p-4 pt-3 h-80 rounded-2xl">
     {% for job in jobs %}
       {% if job.pending_todos %}
         <a href="{% url 'detail' job.id %}">
-          <div class="card my-3 bg-white min-h-48 2xl:w-64 w-full max-h-fit hover:scale-105 transition duration-300 text-center">
+          <div class="card bg-white min-h-48 w-full max-h-fit hover:scale-105 transition duration-300 text-center">
             <h3 class="bg-green-400 p-2 capitalize font-semibold mb-3">{{ job.position }} @ {{ job.company }}</h3>
             <ul class="text-left px-4">
               {% for todo in job.pending_todos %}
