--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -144,7 +144,7 @@
 			</div>
 
 			<!-- Connection card -->
-			<div class="min-h-fit card text-center shadow-md bg-white">
+			<div class="mb-4 min-h-fit card text-center shadow-md bg-white">
 				<div class="bg-cyan-300 flex items-center justify-start p-2">
 					<h4 class="font-semibold mx-auto">Associated Connection</h4>
 				</div>
@@ -163,7 +163,7 @@
             </div>
           {% endif %}
 			</div>
-				<form class="items-center flex flex-col justify-center" action="#" method="POST">
+				<form class="py-3 mt-4 items-center flex flex-col justify-center" action="#" method="POST">
 					<select class="w-1/3 rounded-full inline-block text-center" name="#">
 						{% for connection in connections %}
 							<option value="{{connection.name}}">{{connection.name}}</option>
